<resources>
    <string name="app_name">Group57_Inclass11</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="choose_pass">Choose Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="signup_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>
